<resources>
    <string name="app_name">Picture Of The Day</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yesterday">Вчера</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="beforeYesterday">Позавчера</string>
    <string name="space">Космическая</string>
    <string name="moon">Лунная</string>
    <string name="mars">Марсианская</string>
</resources>