<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchParent">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupSettings"
        style="@style/ChipGroupSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipThemeSpace"
            style="@style/ChipChoice"
            android:text="@string/space" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipThemeMoon"
            style="@style/ChipChoice"
            android:text="@string/moon" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipThemeMars"
            style="@style/ChipChoice"
            android:text="@string/mars" />
    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>