<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchParent">

    <androidx.core.widget.NestedScrollView
        style="@style/MatchParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            style="@style/WidgetConstraintLayout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                style="@style/TextInputLayout"
                android:hint="@string/search_wiki"
                app:helperText="@string/wiki_helper_text"
                app:layout_constraintBottom_toTopOf="@+id/chipGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text"
                    style="@style/TextInputLayoutEditText"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                style="@style/WrapContent"
                app:layout_constraintBottom_toTopOf="@+id/image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipBeforeYesterday"
                    style="@style/ChipChoice"
                    android:text="@string/beforeYesterday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipYesterday"
                    style="@style/ChipChoice"
                    android:text="@string/yesterday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipToday"
                    style="@style/ChipChoice"
                    android:text="@string/today" />
            </com.google.android.material.chip.ChipGroup>

            <org.sochidrive.pod.ui.view.EquilateralImageView
                android:id="@+id/image_view"
                style="@style/QuilateralImageView"
                android:layout_marginLeft="@dimen/pic_def_margin"
                android:layout_marginRight="@dimen/pic_def_margin"
                android:contentDescription="@string/photo_of_the_day_stub"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/bottom_sheet_layout" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        style="@style/BottomAppBar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        style="@style/FloatingActionButton"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
